<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Registration">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/login_window" />

    <EditText
        android:id="@+id/mName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:hint="@string/enter_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:selectAllOnFocus="true"
        />
    <EditText
        android:id="@+id/mMobile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mobileno"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:selectAllOnFocus="true"
        />


    <EditText
        android:id="@+id/mUsername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        />

    <EditText
        android:id="@+id/mPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:hint="@string/enter_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        />

    <Button
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        />


</LinearLayout>